fix overflow-x

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -100,7 +100,7 @@ html, body
   color #c1c1c1
   background #000
   position: absolute
-  top: 6px
+  top: 1px
   right: 15px
   -webkit-appearance: none
   -moz-appearance: none
@@ -236,8 +236,9 @@ html, body
     right 50px
   .top-bar .logo-3
     position absolute
-    top 0
-    right 50px
+    top 5px
+    // right 50px
+    right: 80px
   .content-center
     padding: 0 70px
     text-align: left
@@ -253,7 +254,7 @@ html, body
       left: 64px
   #select-lang
     top: 6px;
-    right: -54px
+    right: 15px
 
 
 @media screen and (min-width: 1200px)
